--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,8 +42,7 @@
             "name": "App",
             "request": "launch",
             "mainClass": "App",
-            "projectName": "CthulhuWars_a58dff4c",
-            "vmArgs": "--module-path \"C:/Users/anton/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path \"C:/Users/Julia Tatarinova/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
