--- a/static/AdjLocations/6Players/North America East.json
+++ b/static/AdjLocations/6Players/North America East.json
@@ -1,6 +1,6 @@
 [
   "North America West",
-  "North Atlantic",
+  "North Atlantic Small",
   "Bering Sea",
-  "Arctic Ocean"
+  "Arctic Ocean Small"
 ]
